/created redux store add typescript

--- a/src/modules/common/components/Header/Header.module.scss
+++ b/src/modules/common/components/Header/Header.module.scss
@@ -8,6 +8,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        width: $container-width;
+        margin: 0 auto;
+
+        .buttonCart {}
     }
 
     &__logo {
