--- a/src/modules/common/styles/colors.scss
+++ b/src/modules/common/styles/colors.scss
@@ -1,8 +1,23 @@
-$black: #232323;
+//// Header
 $background: #ffdf8c;
-$gray-line: #f6f6f6;
+$black23: #232323;
+$black18:#181818;
+$black1111:#111111;
+
+$white:#fff;
+$whiteDDD:#dddddd;
+$whiteF9:#f9f9f9;
+$headerDelimiter:rgba(255, 255, 255, 0.25);
 $orange: #fe5f1e;
+$gray7b:#7b7b7b;
+$gray8d:#8d8d8d;
+$greyB6:#b6b6b6;
+$greyC3:#c3c3c3;
+$grey777:#777777;
+$grey3D:#3d3d3d;
+$grayF6: #f6f6f6;
+$gray28:#282828;
+$grayF3:#f3f3f3;
 
-$container-width: 90%;
 
-$duration: 0.15s;
+// $container-width: 90%;
