--- a/client/src/modules/auth/components/UI/WrapperForm/WrapperForm.module.scss
+++ b/client/src/modules/auth/components/UI/WrapperForm/WrapperForm.module.scss
@@ -1,6 +1,8 @@
-@import '../../../common/styles/colors.scss';
+@import '../../../../common/styles/colors.scss';
 
 .wrapper {
+    width: max-content;
+    margin: 0 auto;
     min-height: 400px;
     display: flex;
     justify-content: start;
