--- a/client/src/modules/auth/components/LoginForm/FormLogin.module.scss
+++ b/client/src/modules/auth/components/LoginForm/FormLogin.module.scss
@@ -1,85 +1,64 @@
 @import '../../../common/styles/colors.scss';
 
-.inputAuth {
-    border: 2px solid $orange;
-    color: $gray;
-    font-size: 16px;
-    font-weight: 700;
-    padding: 0 2px;
-    padding-left: 50px;
-    width: 100%;
-    height: 34px;
-    box-sizing: content-box;
-    border-radius: 3px;
+.wrapper {
+    width: 310px;
 
-    &:focus {
-        border: 2px solid $background;
-    }
-}
 
-.authButtons {
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    width: 270px;
-    text-align: center;
 
-    .button {
-        cursor: pointer;
-        width: 120px;
-        background-color: $orange;
-        padding: 10px 0;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-        font-weight: 600;
+    .inputAuth {
+        border: 2px solid $orange;
+        color: $gray;
         font-size: 16px;
-        color: $white;
-        border: 0px;
+        font-weight: 700;
+        padding: 0 2px;
+        padding-left: 50px;
+        width: 100%;
+        height: 34px;
+        box-sizing: content-box;
+        border-radius: 3px;
 
-        &:hover {
-            outline: 3px solid $orange;
-            color: $black1111;
-            transition: color 1s;
+        &:focus {
+            border: 2px solid $background;
         }
     }
-}
 
-.error {
-    margin-top: 5px;
-    color: $orange;
-    animation: shake 1.5s;
-    animation-iteration-count: infinite;
-    text-align: center;
-}
 
-@keyframes shake {
-
-    0%,
-    50%,
-    100% {
-        transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
+    .error {
+        margin-top: 5px;
+        color: $orange;
+        animation: shake 1.5s;
+        animation-iteration-count: infinite;
+        text-align: center;
     }
 
-    10%,
-    30% {
-        transform: rotate(-2deg);
-        -webkit-transform: rotate(-2deg);
-        -moz-transform: rotate(-2deg);
-        -o-transform: rotate(-2deg);
-        -ms-transform: rotate(-2deg);
-    }
+    @keyframes shake {
 
-    20%,
-    40% {
-        transform: rotate(2deg);
-        -webkit-transform: rotate(2deg);
-        -moz-transform: rotate(2deg);
-        -o-transform: rotate(2deg);
-        -ms-transform: rotate(2deg);
+        0%,
+        50%,
+        100% {
+            transform: rotate(0deg);
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            -ms-transform: rotate(0deg);
+        }
+
+        10%,
+        30% {
+            transform: rotate(-2deg);
+            -webkit-transform: rotate(-2deg);
+            -moz-transform: rotate(-2deg);
+            -o-transform: rotate(-2deg);
+            -ms-transform: rotate(-2deg);
+        }
+
+        20%,
+        40% {
+            transform: rotate(2deg);
+            -webkit-transform: rotate(2deg);
+            -moz-transform: rotate(2deg);
+            -o-transform: rotate(2deg);
+            -ms-transform: rotate(2deg);
+        }
     }
 }
