--- a/client/src/modules/auth/components/RegistrationForm/RegistrationForm.module.scss
+++ b/client/src/modules/auth/components/RegistrationForm/RegistrationForm.module.scss
@@ -1,46 +1,50 @@
 @import '../../../common/styles/colors.scss';
 
-.inputAuth {
-    border: 2px solid $orange;
-    color: $gray;
-    font-size: 16px;
-    font-weight: 700;
-    padding: 0 2px;
-    padding-left: 50px;
-    width: 100%;
-    height: 34px;
-    box-sizing: content-box;
-    border-radius: 3px;
+.wrapper {
+    min-width: 310px;
 
-    &:focus {
-        border: 2px solid $background;
-    }
-}
-
-.regButtons {
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    width: 270px;
-    text-align: center;
-
-    .button {
-        cursor: pointer;
-        width: 120px;
-        background-color: $orange;
-        padding: 10px 0;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-        font-weight: 600;
+    .inputAuth {
+        border: 2px solid $orange;
+        color: $gray;
         font-size: 16px;
-        color: $white;
-        border: 0px;
+        font-weight: 700;
+        padding: 0 2px;
+        padding-left: 50px;
+        width: 100%;
+        height: 34px;
+        box-sizing: content-box;
+        border-radius: 3px;
 
-        &:hover {
-            outline: 3px solid $orange;
-            color: $black1111;
-            transition: color 1s;
+        &:focus {
+            border: 2px solid $background;
+        }
+    }
+
+    .regButtons {
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        width: 270px;
+        text-align: center;
+
+        .button {
+            cursor: pointer;
+            width: 120px;
+            background-color: $orange;
+            padding: 10px 0;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+            font-weight: 600;
+            font-size: 16px;
+            color: $white;
+            border: 0px;
+
+            &:hover {
+                outline: 3px solid $orange;
+                color: $black1111;
+                transition: color 1s;
+            }
         }
     }
 }
