--- a/client/src/modules/app/App.module.scss
+++ b/client/src/modules/app/App.module.scss
@@ -3,7 +3,7 @@
 
 .wrapper {
     width: calc(100vw - 100px);
-    height: 100%;
+    min-height: 100vh;
     background-color: $white;
     margin: 0 auto;
     border-radius: 10px;
