--- a/client/src/modules/pizzaOrder/components/PizzaBlock/PizzaBlock.module.scss
+++ b/client/src/modules/pizzaOrder/components/PizzaBlock/PizzaBlock.module.scss
@@ -128,11 +128,11 @@
         letter-spacing: 0.015em;
     }
 
-    .buttonOrder {
+    .addTocart {
         display: inline-block;
         background-color: $white;
-
-
+        display: flex;
+        align-items: center;
         border-radius: 30px;
         padding: 10px 20px;
         min-width: 100px;
@@ -143,7 +143,11 @@
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
-
+        .emptyCount{
+            width: 0;
+            height: 22px;
+            visibility: hidden;
+        }
         i {
             display: inline-block;
             border-radius: 30px;
