--- a/client/src/modules/common/styles/colors.scss
+++ b/client/src/modules/common/styles/colors.scss
@@ -1,5 +1,6 @@
 //// Header
-$background: #ffdf8c;
+// $background: #ffdf8c;
+$background: #53457a;
 $black23: #232323;
 $black18:#181818;
 $black1111:#111111;
