--- a/client/src/modules/historyCart/components/HistoryOptions/HistoryOptions.module.scss
+++ b/client/src/modules/historyCart/components/HistoryOptions/HistoryOptions.module.scss
@@ -21,6 +21,9 @@
     border-left: 2px solid $black18;
     border-right: 2px solid $black18;
     border-radius: 3px;
+    @media (max-width:960px) {
+        min-width: 100%;
+    }
     .date{
         display: flex;
         align-items: center;
