--- a/client/src/modules/pizzaOrder/components/LayoutOrder/LayoutOrder.module.scss
+++ b/client/src/modules/pizzaOrder/components/LayoutOrder/LayoutOrder.module.scss
@@ -19,5 +19,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        @media (max-width:700px) {
+            justify-content: center;
+        }
     }
 }
